--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -177,6 +177,7 @@ on:
           - 5.15.y
           - 6.1.y
           - 6.6.y
+          - 6.1.100
           - 6.1.y_6.6.y
           - 5.15.y_5.10.y
       auto_kernel:
@@ -286,8 +287,8 @@ jobs:
               REPO_BRANCH="main"
               TAGS_NAME="official"
           elif [[ "${{ inputs.source_branch }}" == *"lede"* ]]; then
-              REPO_URL="https://github.com/coolsnowwolf/lede"
-              REPO_BRANCH="master"
+              REPO_URL="https://github.com/aguoxing/lede"
+              REPO_BRANCH="rk3399"
               TAGS_NAME="lede"
           elif [[ "${{ inputs.source_branch }}" == *"immortalwrt"* ]]; then
               REPO_URL="https://github.com/immortalwrt/immortalwrt"
