--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -5,6 +5,8 @@
 CONFIG_MODULES=y
 CONFIG_HAVE_DOT_CONFIG=y
 CONFIG_HOST_OS_LINUX=y
+CONFIG_DEFAULT_autocore-arm=y
+CONFIG_PACKAGE_autocore-arm=y
 # CONFIG_HOST_OS_MACOS is not set
 # CONFIG_TARGET_airoha is not set
 # CONFIG_TARGET_sunxi is not set
