--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -1802,8 +1802,8 @@ CONFIG_PACKAGE_autocore-arm=y
 CONFIG_PACKAGE_fm350-modem=y
 CONFIG_PACKAGE_autocore-arm=y
 # CONFIG_PACKAGE_automount is not set
-# CONFIG_PACKAGE_autosamba is not set
-# CONFIG_PACKAGE_cpufreq is not set
+CONFIG_PACKAGE_autosamba=y
+CONFIG_PACKAGE_cpufreq=y
 # CONFIG_PACKAGE_ipv6helper is not set
 # CONFIG_PACKAGE_jose is not set
 CONFIG_PACKAGE_libiwinfo-data=y
