--- a/config/lede-master/config
+++ b/config/lede-master/config
@@ -5064,6 +5064,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-3ginfo-lite=y
 # end of 3. Applications
 
 #
@@ -5369,6 +5370,7 @@ CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-modem-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-pcimodem-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-sms-tool-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-3ginfo-lite-zh-cn=y
 # end of LuCI
 
 #
